Intial verson of the webpage

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>The Scala.js Tutorial</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <title>Quiz game</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <!-- Include Scala.js compiled code -->
